--- a/Pixed.Application/RouterControl.axaml
+++ b/Pixed.Application/RouterControl.axaml
@@ -15,5 +15,18 @@
     <Route Path="main" Page="windows:MainView"/>
     <Route Path="about" Page="windows:AboutWindow" Type="Modal"/>
     <Route Path="gridSettings" Page="windows:GridSettingsWindow" Type="Modal"/>
+    <Route Path="resizeProject" Page="windows:ResizeProjectWindow" Type="Modal"/>
+    <Route Path="palettes" Page="windows:PaletteWindow" Type="Modal"/>
+    <Route Path="transformAlign" Page="windows:TransformAlignWindow" Type="Modal"/>
+    <Route Path="transformFlip" Page="windows:TransformFlipWindow" Type="Modal"/>
+    <Route Path="transformRotate" Page="windows:TransformRotateWindow" Type="Modal"/>
+    <Route Path="newProject" Page="windows:NewProjectWindow" Type="Modal"/>
+    <Route Path="unsavedChanges" Page="windows:UnsavedChangesWindow" Type="Modal"/>
+    <Route Path="changeOpacity" Page="windows:ChangeOpacityWindow" Type="Modal"/>
+    <Route Path="changeLayerName" Page="windows:ChangeLayerNameWindow" Type="Modal"/>
+    <Route Path="changePaletteName" Page="windows:ChangePaletteNameWindow" Type="Modal"/>
+    <Route Path="exportIcon" Page="windows:ExportIconWindow" Type="Modal"/>
+    <Route Path="exportPng" Page="windows:ExportPNGWindow" Type="Modal"/>
+    <Route Path="openPng" Page="windows:OpenPNGWindow" Type="Modal"/>
   </ShellView>
 </UserControl>
