--- a/Pixed.Application/Routing/RouterControl.axaml
+++ b/Pixed.Application/Routing/RouterControl.axaml
@@ -28,5 +28,6 @@
     <Route Path="exportIcon" Page="windows:ExportIconWindow" Type="Modal"/>
     <Route Path="exportPng" Page="windows:ExportPNGWindow" Type="Modal"/>
     <Route Path="openPng" Page="windows:OpenPNGWindow" Type="Modal"/>
+    <Route Path="saveFormat" Page="windows:SaveDialogFormatSelectionWindow" Type="Modal"/>
   </ShellView>
 </UserControl>
