--- a/Pixed.Application/Windows/PromptWindow.axaml
+++ b/Pixed.Application/Windows/PromptWindow.axaml
@@ -1,4 +1,4 @@
-<local:PixedWindow x:Class="Pixed.Application.Windows.NumericPrompt"
+﻿<local:PixedWindow x:Class="Pixed.Application.Windows.PromptWindow"
         xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,8 +8,8 @@
         Title="Prompt">
   <local:PixedWindow.Dialog>
     <StackPanel>
-      <TextBlock Text="{Binding Text, RelativeSource={RelativeSource FindAncestor, AncestorType=local:NumericPrompt}}" Margin="10"/>
-      <NumericUpDown Name="numeric" Margin="10" Minimum="{Binding Minimum, RelativeSource={RelativeSource FindAncestor, AncestorType=local:NumericPrompt}}" Maximum="{Binding Maximum, RelativeSource={RelativeSource FindAncestor, AncestorType=local:NumericPrompt}}" Value="{Binding DefaultValue, RelativeSource={RelativeSource FindAncestor, AncestorType=local:NumericPrompt}}"/>
+      <TextBlock Text="{Binding Text, RelativeSource={RelativeSource FindAncestor, AncestorType=local:PromptWindow}}" Margin="10"/>
+      <TextBox x:Name="textBox" Margin="10" Text="{Binding DefaultValue, RelativeSource={RelativeSource FindAncestor, AncestorType=local:PromptWindow}}"/>
       <Button Content="OK" Click="Button_Click"
           Height="24" MinWidth="80" Padding="10,0" Margin="10"/>
     </StackPanel>
