--- a/Pixed.Application/Routing/RouterControl.axaml
+++ b/Pixed.Application/Routing/RouterControl.axaml
@@ -23,6 +23,7 @@
     <Route Path="newProject" Page="windows:NewProjectWindow" Type="Modal"/>
     <Route Path="confirm" Page="windows:ConfirmWindow" Type="Modal"/>
 	<Route Path="prompt" Page="windows:PromptWindow" Type="Modal"/>
+	<Route Path="message" Page="windows:MessageWindow" Type="Modal"/>
 	<Route Path="numericPrompt" Page="windows:NumericPromptWindow" Type="Modal"/>
     <Route Path="exportIcon" Page="windows:ExportIconWindow" Type="Modal"/>
     <Route Path="exportPng" Page="windows:ExportPNGWindow" Type="Modal"/>
