--- a/Pixed.Application/ControlThemes.axaml
+++ b/Pixed.Application/ControlThemes.axaml
@@ -331,4 +331,22 @@
 			<Setter Property="Grid.RowSpan" Value="2" />
 		</Style>
 	</ControlTheme>
+	<ControlTheme x:Key="MainPage" TargetType="Page">
+		<Setter Property="Background" Value="{DynamicResource PageBackground}" />
+		<Setter Property="Template">
+			<ControlTemplate>
+				<Border Background="{TemplateBinding Background}"
+				        CornerRadius="0">
+					<Grid RowDefinitions="Auto,*">
+						<ContentPresenter Grid.Row="0"
+						                  Name="PART_NavigationBarPlaceHolder"></ContentPresenter>
+						<ContentPresenter Grid.Row="1"
+						                  Content="{TemplateBinding Content}"
+						                  Margin="{TemplateBinding PageSafePadding}">
+						</ContentPresenter>
+					</Grid>
+				</Border>
+			</ControlTemplate>
+		</Setter>
+	</ControlTheme>
 </ResourceDictionary>
