--- a/Pixed.Application/Controls/FrameListControl.axaml
+++ b/Pixed.Application/Controls/FrameListControl.axaml
@@ -17,7 +17,7 @@
           </ImageBrush.Transform>
         </ImageBrush>
       </Grid.Background>
-      <Image MaxWidth="96" MaxHeight="96" Source="{Binding RenderSource}" RenderOptions.BitmapInterpolationMode="None"/>
+      <local:SkiaImage MaxWidth="96" MaxHeight="96" Source="{Binding RenderSource}" RenderOptions.BitmapInterpolationMode="None"/>
     </Grid>
   </Grid>
 </UserControl>
