--- a/Pixed.Application/Controls/PaintCanvas.axaml
+++ b/Pixed.Application/Controls/PaintCanvas.axaml
@@ -33,8 +33,8 @@
 							  PointerWheelChanged="Canvas_PointerWheelChanged"
 				  RenderOptions.BitmapInterpolationMode="None"
 				  Background="{Binding TransparentBrush}">
-					<controls:SkiaImage Name="image" RenderOptions.BitmapInterpolationMode="None" Source="{Binding RenderBitmap}"/>
-					<controls:SkiaImage Name="overlay" RenderOptions.BitmapInterpolationMode="None" Source="{Binding OverlayBitmap}"/>
+					<controls:SkiaImage Name="image" RenderOptions.BitmapInterpolationMode="None" Source="{Binding ImageBitmap}"/>
+					<controls:SkiaImage Name="overlay" RenderOptions.BitmapInterpolationMode="None"/>
 					<controls:ImageGrid Width="{Binding ScaledGridWidth}" Height="{Binding ScaledGridHeight}" Name="gridCanvas" IsHitTestVisible="False"/>
 					<controls:SelectionOverlay Width="{Binding ScaledGridWidth}" Height="{Binding ScaledGridHeight}" Name="selectionOverlay" IsHitTestVisible="False" IsVisible="{Binding OverlayVisible}"/>
 				</Canvas>
